--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,18 +31,20 @@
       </div>
       <div class="portfolio-benefits-text">
         <h2>Lorem Ipsum is simply dummy text.</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy</p>
-        <div class="check-div">
-          <img src="/img/check.png">
-          <p>Lorem Ipsum is simply</p>
-        </div>
-        <div class="check-div">
-          <img src="/img/check.png">
-          <p>Lorem Ipsum is simply</p>
-        </div>
-        <div class="check-div">
-          <img src="/img/check.png">
-          <p>Lorem Ipsum is simply</p>
+        <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy</p>
+        <div class="check-container">
+          <div class="check-div">
+            <img src="/img/check.png">
+            <p>Lorem Ipsum is simply</p>
+          </div>
+          <div class="check-div">
+            <img src="/img/check.png">
+            <p>Lorem Ipsum is simply</p>
+          </div>
+          <div class="check-div">
+            <img src="/img/check.png">
+            <p>Lorem Ipsum is simply</p>
+          </div>
         </div>
       </div>
     </div>
@@ -96,11 +98,46 @@
     <div class="portfolio-comment-container">
       <h1>Trusted by Thousands of Happy Customer</h1>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy</p>
-      <div class="portfolio-comment">
-        <p>Name</p>
-        <p>email</p>
-        <p>comment</p>
+
+      <div class="portfolio-comment-div">
+
+        <div class="portfolio-comment">
+          <p class="comment-name">Name</p>
+          <p class="comment-email">email</p>
+          <p class="comment-body">comment</p>
+        </div>
+        <div class="portfolio-comment">
+          <p class="comment-name">Name</p>
+          <p class="comment-email">email</p>
+          <p class="comment-body">comment</p>
+        </div>
+        <div class="portfolio-comment">
+          <p class="comment-name">Name</p>
+          <p class="comment-email">email</p>
+          <p class="comment-body">comment</p>
+        </div>
+        <div class="portfolio-comment">
+          <p class="comment-name">Name</p>
+          <p class="comment-email">email</p>
+          <p class="comment-body">comment</p>
+        </div>
+        <div class="portfolio-comment">
+          <p class="comment-name">Name</p>
+          <p class="comment-email">email</p>
+          <p class="comment-body">comment</p>
+
+        </div>
       </div>
+
+      <div class="comment-buttons">
+        <div class="comment-button prev-button">
+          <img src="../img/arrow.png" alt="arrow-left">
+        </div>
+        <div class="comment-button next-button">
+          <img src="../img/arrow.png" alt="arrow-right">
+        </div>
+      </div>
+
     </div>
 
   </div>
