--- a/index.html
+++ b/index.html
@@ -8,26 +8,45 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rubik:wght@500;700&display=swap" rel="stylesheet">
-  <!-- <link href="css/media.css" rel="stylesheet"> -->
+  <link href="css/media.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <title>Document</title>
 </head>
 
 <body>
-  <div class="wrapper-header">
-    <header>
-      <div class="logo">
-        <a href="/"><img src="img/icon.png"></a>
-      </div>
-      <div class="menu">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#about"">About</a></li>
-          <li><a href="#portfolio"">Portfolio</a></li>
-        </ul>
-      </div>
-      <button id = "contact-button">Contact us</button>
-    </header>
+  <div class="header-container">
+    <div class="wrapper-header">
+      <header>
+        <div class="logo">
+          <a href="/"><img src="img/icon.png"></a>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="#about"">About</a></li>
+            <li><a href="#portfolio"">Portfolio</a></li>
+          </ul>
+        </div>
+        <button class = "contact-button">Contact us</button>
+      </header>
+    </div>
+  </div>
+  
+  <div class="burger-icon">
+    <img src="img/burger.jpg" alt="menu">
+  </div>
+
+  <div class="burger">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="#about"">About</a></li>
+        <li><a href="#portfolio"">Portfolio</a></li>
+        <li><div class="contact-button">Contact us</div></li>
+      </ul>
+  </div>
+
+  <div class="call-back">
+    <p>We'll call you back soon!</p>
   </div>
 
   <main>
@@ -76,10 +95,10 @@
             <p>+908 89097 890</p>
           </div>
           <div class="footer-social">
-            <img src="img/fb.png" alt="Facebook">
-            <img src="img/lin.png" alt="LinkedIn">
-            <img src="img/tw.png" alt="Twitter">
-            <img src="img/inst.png" alt="Instagram">
+            <a href="https://www.facebook.com/"><img src="img/fb.png" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/"><img src="img/lin.png" alt="LinkedIn"></a>
+            <a href="https://twitter.com/"><img src="img/tw.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/"><img src="img/inst.png" alt="Instagram"></a>
           </div>
         </div>
         <hr>
@@ -102,10 +121,6 @@
       <button type="submit" class="round-button submit-button">Submit</button>
       </div>
     </div>
-  </div>
-
-  <div id="call-back">
-    <p>We will call you back soon!</p>
   </div>
 
   <script src="js/script.js"></script>
