--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <ul>
               <li>Portfolio</li>
               <li>Careers</li>
-              <li>Contact us</li>
+              <li>Contact</li>
             </ul>
           </div>
           <div class="footer-contact">
