--- a/pages/home.html
+++ b/pages/home.html
@@ -61,32 +61,32 @@
           <div class="platforms-div">
             <img src="img/Mobile.png" alt="Mobile">
             <p>Mobile Game Development</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
           <div class="platforms-div">
             <img src="img/PC.png" alt="PC">
             <p>PC Game Development</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
           <div class="platforms-div">
             <img src="img/ps4.png" alt="ps4">
             <p>PS4 Game Development</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
           <div class="platforms-div">
             <img src="img/VR-solutions.png" alt="VR-solutions">
             <p>AR/VR Solutions</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
           <div class="platforms-div">
             <img src="img/VR-design.png" alt="VR-design">
             <p>AR/VR design</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
           <div class="platforms-div">
             <img src="img/3D.png" alt="3D">
             <p>3D Modelings</p>
-            <img src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png">
           </div>
         </div>
       </div>
