--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <div class="wrapper-header">
       <header>
         <div class="logo">
-          <a href="/"><img src="img/icon.png"></a>
+          <a href="/"><img src="img/icon.png" alt="logo"></a>
         </div>
         <div class="menu">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#about"">About</a></li>
-            <li><a href="#portfolio"">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
           </ul>
         </div>
-        <button class = "contact-button">Contact us</button>
+        <button class="contact-button">Contact us</button>
       </header>
     </div>
   </div>
@@ -39,8 +39,8 @@
   <div class="burger">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="#about"">About</a></li>
-        <li><a href="#portfolio"">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><div class="contact-button">Contact us</div></li>
       </ul>
   </div>
@@ -49,19 +49,23 @@
     <p>We'll call you back soon!</p>
   </div>
 
+  <div class="news">
+    <p>An email has been sent to your inbox, follow the link in it to receive news</p>
+  </div>
+
   <main>
   </main>
 
   <div class="email">
     <div class="wrapper">
       <div class="email-text">
-        <h1>Lorem Ipsum</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Leave a mark</h2>
+        <p>We’d love all games and gamers to be treated like that, and we’re working hard every day to make that happen.</p>
       </div>
       <div class="stay-in-loop">
         <div class="stay-in-loop-text">
-          <h1>Stay in loop</h1>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <h2>Stay in loop</h2>
+          <p>We are always looking for creative, driven and professional individuals</p>
         </div>
         <div class="stay-in-loop-email">
           <input type="text" placeholder="Enter email address">
@@ -75,30 +79,30 @@
   <div class="wrapper">
       <footer>
         <div class="footer-container">
-          <img src="img/icon.png" class="footer-head">
-          <p class="footer-head">About us</p>
-          <p class="footer-head">Contact us</p>
+          <img src="img/icon.png" class="footer-head" alt="logo">
+          <p class="footer-head"><a href="#about">About</a></p>
+          <p class="footer-head contact-button">Contact us</p>
           <div class="footer-logo">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+            <p>We innovate and provoke change by giving example</p>
             <p>@xbox</p>
           </div>
 
           <div class="footer-about">
             <ul>
-              <li>Portfolio</li>
-              <li>Careers</li>
-              <li>Contact</li>
+              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="#portfolio">Careers</a></li>
+              <li class="contact-button">Contact</li>
             </ul>
           </div>
           <div class="footer-contact">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>We are a global video game development studio established in 2002</p>
             <p>+908 89097 890</p>
           </div>
           <div class="footer-social">
-            <a href="https://www.facebook.com/"><img src="img/fb.png" alt="Facebook"></a>
-            <a href="https://www.linkedin.com/"><img src="img/lin.png" alt="LinkedIn"></a>
-            <a href="https://twitter.com/"><img src="img/tw.png" alt="Twitter"></a>
-            <a href="https://www.instagram.com/"><img src="img/inst.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/fb.png" alt="Facebook"></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="img/lin.png" alt="LinkedIn"></a>
+            <a href="https://twitter.com/" target="_blank"><img src="img/tw.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="img/inst.png" alt="Instagram"></a>
           </div>
         </div>
         <hr>
@@ -111,7 +115,7 @@
   <div class="modal">
     <div class="modal-content">
       <span class="close-modal">&times;</span>
-      <h1>Contact us</h1>
+      <h2>Contact us</h2>
       <form name="contactForm">
         <input type="text" placeholder="Name"/>
         <input type="text" placeholder="Surname"/>
@@ -119,7 +123,6 @@
         <input type="tel" placeholder="Phone number"/>
       </form>
       <button type="submit" class="round-button submit-button">Submit</button>
-      </div>
     </div>
   </div>
 
