--- a/pages/about.html
+++ b/pages/about.html
@@ -5,36 +5,33 @@
         <p>
           <a href="/">Home</a> > <a href="#about" class="orange-text">About</a>
         </p>
-        <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s.</p>
-        <div class="round-button">Get in touch</div>
+        <h1>Discover your next favourite game</h1>
+        <p>Play hundreds of high-quality games with friends on console, PC, phones and tablets. Slay alone or squad up against a legion of vampires in this open-world FPS!</p>
+        <div class="round-button"><a href="#portfolio">Check Portfolio</a></div>
       </div>
     </div>
   </div>
 
   <div class="why-work wrapper">
-    <h1>Why work with us</h1>
+    <h2>Why work with us</h2>
     <div class="why-work-container">
       <div class="why-work-div">
-        <p class="tag">Lorem ipsum</p>
-        <h2>Lorem ipsum</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s,</p>
+        <p class="tag">Become a partner</p>
+        <h2>Xbox</h2>
+        <p>The Outer Wilds, Destiny 2, Hellblade: Senua's Sacrifice, Yakuza: Like a Dragon, Gears Tactics, No Man's Sky, Elder
+        Scrolls Online, Elder Scrolls Online, Titanfall 2</p>
       </div>
       <div class="why-work-div">
-        <p class="tag">Lorem ipsum</p>
-        <h2>Lorem ipsum</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard
-          dummy text ever since the 1500s,</p>
+        <p class="tag">Become a partner</p>
+        <h2>PC</h2>
+        <p>Disco Elysium: The Final Cut, Half-Life 2, Grand Theft Auto V, The Orange Box, BioShock, Baldur's Gate II: Shadows of
+        Amn, Persona 5 Royal, The elder scrolls V: Skyrim</p>
       </div>
       <div class="why-work-div">
-        <p class="tag">Lorem ipsum</p>
-        <h2>Lorem ipsum</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard
-          dummy text ever since the 1500s,</p>
+        <p class="tag">Become a partner</p>
+        <h2>Mobile</h2>
+        <p>Raid: Shadow Legends, Mech Arena, Mafia City, Forge of Empires, Rise of Cultures, Epic Seven, Daily Themed Crossword Puzzles,
+          Monument Valley, Jetpack Joyride</p>
       </div>
     </div>
   </div>
@@ -42,37 +39,36 @@
   <div class="example">
     <div class="wrapper">
       <div class="example-container">
-        <p>Lorem ipsum</p>
-        <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-        book. It has survived not only five centuries,</p>
+        <p>Boss-free since 2005</p>
+        <h2>We aren't a typical company—which is why you're here, right?</h2>
+        <p>As a flat company without hierarchy and job titles, we don't usually hire for specific roles. (Though we sometimes do!)
+        Opportunities at Valve run broad and deep. We believe that the best product decisions are made by the people who are actually doing the work.</p>
       </div>
     </div>
   </div>
 
   <div class="team wrapper">
-    <h1>Our team</h1>
+    <h2>Our team</h2>
     <div class="team-container">
       <div class="team-div">
-        <img src="/img/avatar1.png">
+        <img src="/img/avatar1.png" alt="user avatar">
         <h3>Samwell</h3>
-        <p class="tag">Lorem ipsum</p>
+        <p class="tag">Game designer</p>
       </div>
       <div class="team-div">
-        <img src="/img/avatar2.png">
+        <img src="/img/avatar2.png" alt="user avatar">
         <h3>Cersei</h3>
-        <p class="tag">Lorem ipsum</p>
+        <p class="tag">System designer</p>
       </div>
       <div class="team-div">
-        <img src="/img/avatar3.png">
+        <img src="/img/avatar3.png" alt="user avatar">
         <h3>Tormund</h3>
-        <p class="tag">Lorem ipsum</p>
+        <p class="tag">Level designer</p>
       </div>
       <div class="team-div">
-        <img src="/img/avatar4.png">
+        <img src="/img/avatar4.png" alt="user avatar">
         <h3>Tyrion</h3>
-        <p class="tag">Lorem ipsum</p>
+        <p class="tag">Game programmer</p>
       </div>
     </div>
   </div>
