--- a/pages/home.html
+++ b/pages/home.html
@@ -5,15 +5,14 @@
       <div class="thumbnail-text">
         <h2>3D game Dev</h2>
         <h1>Work that we produce for our clients</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard.</p>
-        <button class="round-button">Get more details</button>
+        <p>Wherever you hail from, however old you are, games have defined you and now you want to define others through games</p>
+        <button class="round-button"><a href="#portfolio">Get more details</a></button>
       </div>
       <div class="thumbnail-engines">
         <img id="gamepad" ; src="/img/gamepad.png" alt="gamepad">
-        <img id="cry" ; src="/img/cry-engine.png" alt="cry engine">
-        <img id="unity" ; src="/img/unity.png" alt="unity">
-        <img id="unreal" ; src="/img/unreal-engine.png" alt="unreal engine">
+        <a href="https://www.cryengine.com/"><img id="cry" ; src="/img/cry-engine.png" alt="cry engine"></a>
+        <a href="https://unity.com/"><img id="unity" ; src="/img/unity.png" alt="unity"></a>
+        <a href="https://www.unrealengine.com/"><img id="unreal" ; src="/img/unreal-engine.png" alt="unreal engine"></a>
       </div>
     </div>
   
@@ -21,19 +20,19 @@
       <h2>Currently Trending Games</h2>
       <div class="trend-games-imgs">
         <div class="div-trend-game">
-          <img src="img/trend-game-1.png">
+          <a href="https://www.twitch.tv/" target="_blank"><img src="img/trend-game-1.png" alt="trend game"></a>
           <p>40 Followers</p>
         </div>
         <div class="div-trend-game">
-          <img src="img/trend-game-2.png">
+          <a href="https://www.twitch.tv/" target="_blank"><img src="img/trend-game-2.png" alt="trend game"></a>
           <p>50 Followers</p>
         </div>
         <div class="div-trend-game">
-          <img src="img/trend-game-3.png">
+          <a href="https://www.twitch.tv/" target="_blank"><img src="img/trend-game-3.png" alt="trend game"></a>
           <p>30 Followers</p>
         </div>
         <div class="div-trend-game">
-          <img src="img/trend-game-4.png">
+          <a href="https://www.twitch.tv/" target="_blank"><img src="img/trend-game-4.png" alt="trend game"></a>
           <p>100 Followers</p>
         </div>
       </div>
@@ -43,9 +42,10 @@
   <div class="big-picture-container-bg">
     <div class="wrapper">
       <div class="big-picture-container">
-        <h1>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s,</p>
+        <h2>Internal production communities of practice</h2>
+        <p>Director of Production Communities and Competitive Intelligence Vicky Lagarre leads a team that helps support and grow
+        internal production communities of practice – groups of Ubisoft employees organized around common technical and
+        production-related disciplines and interests.</p>
         <img src="img/spider-man.png" alt="spider-man">
       </div>
     </div>
@@ -54,39 +54,39 @@
   <div class="platforms-bg">
     <div class="wrapper">
       <div class="platforms">
-        <h1>Lorem Ipsum is simply dummy text of the printing</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s,</p>
+        <h2>We develop games for all platforms</h2>
+        <p>The key was finding material flexible enough that we could modify its shape but maintain the look we wanted once it
+        cooled</p>
         <div class="platforms-container">
           <div class="platforms-div">
             <img src="img/Mobile.png" alt="Mobile">
             <p>Mobile Game Development</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
           <div class="platforms-div">
             <img src="img/PC.png" alt="PC">
             <p>PC Game Development</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
           <div class="platforms-div">
             <img src="img/ps4.png" alt="ps4">
             <p>PS4 Game Development</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
           <div class="platforms-div">
             <img src="img/VR-solutions.png" alt="VR-solutions">
             <p>AR/VR Solutions</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
           <div class="platforms-div">
             <img src="img/VR-design.png" alt="VR-design">
             <p>AR/VR design</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
           <div class="platforms-div">
             <img src="img/3D.png" alt="3D">
             <p>3D Modelings</p>
-            <img class="arrow" src="img/arrow.png">
+            <img class="arrow" src="img/arrow.png" alt="arrow">
           </div>
         </div>
       </div>
@@ -96,15 +96,15 @@
   <div class="recent-bg">
     <div class="wrapper">
       <div class="recent">
-        <h1>Our Recent Projects</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Our Recent Projects</h2>
+        <p>We deliver bleeding edge, mature video games with a deep focus on storytelling</p>
         <div class="recent-gallery">
-          <img id="recent1" src="img/recent1.png">
-          <img id="recent2" src="img/recent2.png">
-          <img id="recent3" src="img/recent3.png">
-          <img id="recent4" src="img/recent4.png">
-          <img id="recent5" src="img/recent5.png">
-          <img id="recent6" src="img/recent6.png">
+          <img id="recent1" src="img/recent1.png" alt="recent project">
+          <img id="recent2" src="img/recent2.png" alt="recent project">
+          <img id="recent3" src="img/recent3.png" alt="recent project">
+          <img id="recent4" src="img/recent4.png" alt="recent project">
+          <img id="recent5" src="img/recent5.png" alt="recent project">
+          <img id="recent6" src="img/recent6.png" alt="recent project">
         </div>
       </div>
     </div>
