--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -4,21 +4,21 @@
       <p>
         <a href="/">Home</a> > <a href="#portfolio" class="orange-text">Portfolio</a>
       </p>
-      <h1>Lorem Ipsum is simply dummy text of the printing and.</h1>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+      <h1>Our games attract millions and define genres</h1>
+      <p>Our earlier titles were built on an innovative engine with world-class gameplay</p>
       <div class="portfolio-thumbnail-container">
         <div class="portfolio-thumbnail-div">
-          <img src="/img/user.png">
+          <img src="/img/user.png" alt="user">
           <p>90+</p>
           <p>Clients</p>
         </div>
         <div class="portfolio-thumbnail-div">
-          <img src="/img/location.png">
+          <img src="/img/location.png" alt="location">
           <p>30+</p>
           <p>Countries</p>
         </div>
         <div class="portfolio-thumbnail-div">
-          <img src="/img/Server.png">
+          <img src="/img/Server.png" alt="server">
           <p>50+</p>
           <p>Projects</p>
         </div>
@@ -30,20 +30,20 @@
         <img src="/img/spider-man-video.png" alt="spider-man">
       </div>
       <div class="portfolio-benefits-text">
-        <h2>Lorem Ipsum is simply dummy text.</h2>
-        <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy</p>
+        <h2>Iterate, test, repeat</h2>
+        <p class="description">We have some new games in the works, too. A couple have been announced, while others remain top secret.</p>
         <div class="check-container">
           <div class="check-div">
-            <img src="/img/check.png">
-            <p>Lorem Ipsum is simply</p>
+            <img src="/img/check.png" alt="check">
+            <p>You can follow your passion</p>
           </div>
           <div class="check-div">
-            <img src="/img/check.png">
-            <p>Lorem Ipsum is simply</p>
+            <img src="/img/check.png" alt="check">
+            <p>Your work generates tangible results</p>
           </div>
           <div class="check-div">
-            <img src="/img/check.png">
-            <p>Lorem Ipsum is simply</p>
+            <img src="/img/check.png" alt="check">
+            <p>There are multiple routes of entry</p>
           </div>
         </div>
       </div>
@@ -51,53 +51,52 @@
 
     <div class="portfolio-example">
       <div class="portfolio-example-text">
-        <h2>Lorem Ipsum is simply dummy text dummy text</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-        book. It has survived not only five centuries</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <button class="square-button">Read more</button>
+        <h2>There are multiple routes of entry</h2>
+        <p>The video game industry is large, with projects ranging from multimillion-dollar games produced by major studios to
+        independent games created by single developers working in their free time. This diversity of opportunity also creates a
+        diversity of options for getting into game design. While you may choose to pursue a degree from a college or university,
+        you may also choose to work independently or learn to code informally before seeking work with a video game studio.</p>
+        <button class="square-button"><a href="https://jamesclear.com/read-more" target="_blank">Read more</a></button>
       </div>
       <div class="portfolio-example-img">
-        <img src="/img/portfolio-example-1.png">
+        <img src="/img/portfolio-example-1.png" alt="project example">
       </div>
     </div>
 
     <div class="portfolio-example">
       <div class="portfolio-example-img">
-        <img src="/img/portfolio-example-2.png">
+        <img src="/img/portfolio-example-2.png" alt="project example">
       </div>
       <div class="portfolio-example-text">
-        <h2>Lorem Ipsum is simply dummy text dummy text</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard
-          dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-          specimen
-          book. It has survived not only five centuries</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <button class="square-button">Read more</button>
+        <h2>Your work generates tangible results</h2>
+        <p>Video game design is a field in which your work produces products you can see and interact with. Besides being able to
+        play your game yourself, you can also experience how consumers and video game enthusiasts enjoy your product upon
+        release. For some professionals, this can be an appealing opportunity, as it makes it easier to see the appreciable
+        results of the work you have done.</p>
+        <p>You can follow your passion</p>
+        <button class="square-button"><a href="https://jamesclear.com/read-more" target="_blank">Read more</a></button>
       </div>
     </div>
 
     <div class="portfolio-example">
       <div class="portfolio-example-text">
-        <h2>Lorem Ipsum is simply dummy text dummy text</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-          standard
-          dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-          specimen
-          book. It has survived not only five centuries</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        <button class="square-button">Read more</button>
+        <h2>It allows you to express your creativity</h2>
+        <p>As a creative industry, video game design and development can be appealing to those with high creativity levels.
+        Designing a game allows you to apply your creative skills to the construction of an engrossing story or world for the
+        game. You may also demonstrate your creativity in the mechanics that your game implements, creating additional elements
+        or combining established mechanics in new ways to make a more interesting gaming experience.</p>
+        <p>Your work generates tangible results</p>
+        <button class="square-button"><a href="https://jamesclear.com/read-more" target="_blank">Read more</a></button>
       </div>
       <div class="portfolio-example-img">
-        <img src="/img/portfolio-example-3.png">
+        <img src="/img/portfolio-example-3.png" alt="project example">
       </div>
     </div>
 
     <div class="portfolio-comment-container">
-      <h1>Trusted by Thousands of Happy Customer</h1>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy</p>
+      <h2>Trusted by Thousands of Happy Customer</h2>
+      <p>Deepen the functionality of your game with these high-value features, which require more effort to implement but will
+      pay dividends.</p>
 
       <div class="portfolio-comment-div">
 
